--- a/render.yaml
+++ b/render.yaml
@@ -29,3 +29,5 @@ services:
   buildCommand: pip install -r requirements.txt
   startCommand: python main.py
   autoDeployTrigger: commit
+  # force rebuild
+
